log
Wed 20 Mar 2024 05:23:36 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
2333548
Wed 20 Mar 2024 05:24:58 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
a614d5e
Wed 20 Mar 2024 05:29:04 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
fbcf040
Wed 20 Mar 2024 05:33:35 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
b7ca231
Wed 20 Mar 2024 05:34:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
9dd15b9
Wed 20 Mar 2024 05:35:40 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
46263dc
Wed 20 Mar 2024 05:46:34 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:35: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   63 |   List* ptr_lista = malloc(sizeof(List));
      |                                   ^~~~
exercises.c:67:21: error: invalid use of incomplete typedef ‘List’
   67 |       acumulador += (*ptr_lista);
      |                     ^
Compilation failed
3055e73
Wed 20 Mar 2024 05:49:45 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|3
total_score: 20/70
1dfc218
Wed 20 Mar 2024 05:59:25 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
b00bc3d
Wed 20 Mar 2024 06:13:49 PM UTC: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:99:3: error: variable ‘pila_aux’ has initializer but incomplete type
   99 |   Stack pila_aux = create_stack();
      |   ^~~~~
exercises.c:99:9: error: storage size of ‘pila_aux’ isn’t known
   99 |   Stack pila_aux = create_stack();
      |         ^~~~~~~~
exercises.c:99:9: error: unused variable ‘pila_aux’ [-Werror=unused-variable]
cc1: all warnings being treated as errors
Compilation failed
a6f244e
Wed 20 Mar 2024 06:14:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
b7011c2
Wed 20 Mar 2024 06:25:26 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:125:10: error: unused variable ‘pila_aux’ [-Werror=unused-variable]
  125 |   Stack* pila_aux = create_stack();
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ae379a
Wed 20 Mar 2024 06:36:20 PM UTC: 
 exercises.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:134:26: error: comparison between pointer and integer [-Werror]
  134 |         if(top(pila_aux) != '(') return 0;
      |                          ^~
exercises.c:140:26: error: comparison between pointer and integer [-Werror]
  140 |         if(top(pila_aux) != '{') return 0;
      |                          ^~
exercises.c:146:26: error: comparison between pointer and integer [-Werror]
  146 |         if(top(pila_aux) != '[') return 0;
      |                          ^~
cc1: all warnings being treated as errors
Compilation failed
bcdc4b7
